# ghost

./: Build.py  CMakeLists.txt  GenerateProjectFiles.bat  README.md
Ghost/: CMakeLists.txt
Ghost/CopyResources/: CMakeLists.txt
Ghost/CopyResources/Resources/Materials/: DefaultMaterial.xml  DefaultMaterila.xml  HeadMaterial.xml  HouseMaterial_1.xml  HouseMaterial_2.xml  HouseMaterial_3.xml  HouseMaterial_4.xml  LizardMaterial.xml
Ghost/CopyResources/Resources/Shaders/: DefaultShader.hlsl  DefaultShadowPass.hlsl
Ghost/Editor/: CMakeLists.txt
Ghost/Engine/: CMakeLists.txt
Ghost/Engine/GUI/: imconfig.h  imgui.h
Ghost/Engine/include/: Application.h  BoundingBox.h  Buffer.h  Camera.h  Color.h  Common.h  ConstBuffer.h  DataStream.h  DepthStencilTarget.h  Engine.h  FileSystem.h  ForwardRenderer.h  Frustum.h  GPUResourceFlags.h  GUIManager.h  Ghost.h  GhostConfig.h  IndexBuffer.h  Light.h  LogManager.h  Material.h  MathUtilities.h  Matrix4x4.h  Mesh.h  MeshImporter.h  MeshNode.h  MessageHandler.h  Model.h  ModelNode.h  Octree.h  Plane.h  Platform.h  PostprocessingManager.h  Quaternion.h  RenderCommon.h  RenderConfig.h  RenderDevice.h  RenderOperation.h  RenderSystem.h  RenderTarget.h  (+23 more)
Ghost/Engine/include/D3D11/: D3D11Buffer.h  D3D11ComPtr.h  D3D11ConstBuffer.h  D3D11DepthStencilTarget.h  D3D11HardwareShader.h  D3D11IndexBuffer.h  D3D11Mappings.h  D3D11RenderDevice.h  D3D11RenderSystem.h  D3D11RenderTarget.h  D3D11Shader.h  D3D11Texture2D.h  D3D11VertexBuffer.h  D3D11VertexDeclaration.h
Ghost/Engine/include/D3D12/: D3D12ComPtr.h  D3D12RenderDevice.h  D3D12RenderSystem.h
Ghost/Engine/include/Win32/: ApplicationWin32.h  FileSystemWin32.h  RenderWindowWin32.h  TimerWin32.h
Ghost/Engine/src/: Application.cpp  BoundingBox.cpp  Buffer.cpp  Camera.cpp  Color.cpp  ConstBuffer.cpp  DataStream.cpp  DepthStencilTarget.cpp  Engine.cpp  FileSystem.cpp  ForwardRenderer.cpp  Frustum.cpp  GUIManager.cpp  GhostConfig.cpp  IndexBuffer.cpp  Light.cpp  LogManager.cpp  Material.cpp  MathUtilities.cpp  Mesh.cpp  MeshImporter.cpp  MeshNode.cpp  Model.cpp  ModelNode.cpp  Octree.cpp  PostprocessingManager.cpp  RenderCommon.cpp  RenderDevice.cpp  RenderSystem.cpp  RenderTarget.cpp  RenderWindow.cpp  Renderer.cpp  Resource.cpp  SDLRenderWindow.cpp  SceneManager.cpp  SceneNode.cpp  Shader.cpp  ShaderResource.cpp  Texture2D.cpp  TextureUnitState.cpp  (+5 more)
Ghost/Engine/src/D3D11/: D3D11Buffer.cpp  D3D11ConstBuffer.cpp  D3D11DepthStencilTarget.cpp  D3D11IndexBuffer.cpp  D3D11Mappings.cpp  D3D11RenderDevice.cpp  D3D11RenderSystem.cpp  D3D11RenderTarget.cpp  D3D11Texture2D.cpp  D3D11VertexBuffer.cpp  D3D11VertexDeclaration.cpp
Ghost/Engine/src/D3D12/: D3D12RenderDevice.cpp  D3D12RenderSystem.cpp
Ghost/Engine/src/Win32/: ApplicationWin32.cpp  FileSystemWin32.cpp  RenderWindowWin32.cpp  TimerWin32.cpp
Ghost/Modules/: FindDirectX12 .cmake
Ghost/Samples/: CMakeLists.txt  SampleApplication.cpp  SampleApplication.h  main.cpp
Ghost/Samples/NormalMap/: CMakeLists.txt  NormalMap.h  main.cpp
Ghost/Samples/PBRLighting/: CMakeLists.txt  PBRLighting.h  main.cpp
Ghost/Samples/SampleApplication/: CMakeLists.txt  GhostConfig.xml  SampleApplication.cpp  SampleApplication.h  SettingPage.cpp  SettingPage.h  main.cpp
Ghost/Samples/SampleBase/: SampleBase.cpp  SampleBase.h
Ghost/Samples/Textures/: CMakeLists.txt  GhostConfig.xml  SettingPage.h  TexturesApplication.cpp  TexturesApplication.h  main.cpp
