cmake_minimum_required(VERSION 3.14)

project(Ghost)

set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/Ghost/Modules/")

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)

add_subdirectory(Ghost)
add_subdirectory(External)