cmake_minimum_required(VERSION 3.14)

project(Ghost)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/Ghost/Modules/")

if (WIN32)
	add_definitions(-DGHOST_PLATFROM_WIN32)
endif()

option(GHOST_USE_D3D_11_1 "Use D3D11.1" OFF)
if (GHOST_USE_D3D_11_1)
	add_definitions(-DGHOST_USE_D3D_11_1)
endif(GHOST_USE_D3D_11_1)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/Bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/Bin)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)

add_subdirectory(Ghost)
add_subdirectory(External)